# video-rag

./: .gitignore  Dockerfile  README.md  config.py  index.html  ingest.py  main_web.py  pyproject.toml  start.sh
chroma_db/: chroma.sqlite3
ingest/: describe.py  download.py  embedding.py  ingest.py
query/: query.py
videos/: AEJNre8p0uY.en.vtt
